ce/neo4j-ce.template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Neo4j Community Edition
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "AWS Marketplace Parameters"
        Parameters:
          - ImageId
      - Label:
          default: "Neo4j Configuration"
        Parameters:
          - Password
          - NumberOfServers
          - InstanceType
          - DiskSize
    ParameterLabels:
      ImageId:
        default: Image ID
      Password:
        default: Password
      NumberOfServers:
        default: Number of Servers
      InstanceType:
        default: Instance Type
      DiskSize:
        default: Disk Size

Parameters:
  ImageId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/marketplace/prod-vwigx4rbvvb5s/2025.12.0
  Password:
    Description: Password for Neo4j
    Type: String
    MinLength: 8
    NoEcho: true
  NumberOfServers:
    Description: Number of EC2 instances to deploy
    Type: Number
    Default: 3
    AllowedValues:
    - 1
    - 3
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: r8i.xlarge
    AllowedValues:
    - t3.medium
    - r8i.large
    - r8i.xlarge
    - r8i.2xlarge
    - r8i.4xlarge
    - r8i.8xlarge
    - r8i.12xlarge
    - r8i.16xlarge
    - r8i.24xlarge
    - r8i.32xlarge
    - r8i.48xlarge
    - r8i.96xlarge
  DiskSize:
    Description: Size in GB of the EBS volume on each instance
    Type: Number
    Default: 100
    MinValue: 100

Conditions:
  CreateCluster: !Not
    - !Equals
      - !Ref NumberOfServers
      - '1'

Resources:
  Neo4jVPC:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsHostnames: true
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: StackID
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Ref 'AWS::StackName'
        - Key: "aws-apn-id"
          Value: "pc:4t4a9h39qkq4tbo3n9zd51p25"

  Neo4jSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: !Ref 'AWS::Region'
      Tags:
        - Key: StackID
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Ref 'AWS::StackName'
        - Key: "aws-apn-id"
          Value: "pc:4t4a9h39qkq4tbo3n9zd51p25"
      VpcId: !Ref Neo4jVPC

  Neo4jSubnet2:
    Type: AWS::EC2::Subnet
    Condition: CreateCluster
    Properties:
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: !Ref 'AWS::Region'
      Tags:
        - Key: StackID
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Ref 'AWS::StackName'
        - Key: "aws-apn-id"
          Value: "pc:4t4a9h39qkq4tbo3n9zd51p25"
      VpcId: !Ref Neo4jVPC

  Neo4jSubnet3:
    Type: AWS::EC2::Subnet
    Condition: CreateCluster
    Properties:
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
          - 2
          - Fn::GetAZs: !Ref 'AWS::Region'
      Tags:
        - Key: StackID
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Ref 'AWS::StackName'
        - Key: "aws-apn-id"
          Value: "pc:4t4a9h39qkq4tbo3n9zd51p25"
      VpcId: !Ref Neo4jVPC

  Neo4jRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: StackID
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Ref 'AWS::StackName'
        - Key: "aws-apn-id"
          Value: "pc:4t4a9h39qkq4tbo3n9zd51p25"
      VpcId: !Ref Neo4jVPC

  Neo4jRoute:
    Type: AWS::EC2::Route
    Properties:
      GatewayId: !Ref Neo4jInternetGateway
      RouteTableId: !Ref Neo4jRouteTable
      DestinationCidrBlock: 0.0.0.0/0

  Neo4jSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref Neo4jRouteTable
      SubnetId: !Ref Neo4jSubnet1

  Neo4jSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreateCluster
    Properties:
      RouteTableId: !Ref Neo4jRouteTable
      SubnetId: !Ref Neo4jSubnet2

  Neo4jSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreateCluster
    Properties:
      RouteTableId: !Ref Neo4jRouteTable
      SubnetId: !Ref Neo4jSubnet3

  Neo4jInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: StackID
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Ref 'AWS::StackName'
        - Key: "aws-apn-id"
          Value: "pc:4t4a9h39qkq4tbo3n9zd51p25"

  Neo4jInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref Neo4jInternetGateway
      VpcId: !Ref Neo4jVPC

  Neo4jNetworkLoadBalancer:
    DependsOn: Neo4jInternetGateway
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      IpAddressType: ipv4
      Name: !Join
        - '-'
        - - !Ref 'AWS::StackName'
          - 'nlb'
      Scheme: internet-facing
      Subnets: !If [CreateCluster, [!Ref Neo4jSubnet1,!Ref Neo4jSubnet2,!Ref Neo4jSubnet3], [!Ref Neo4jSubnet1]]
      Tags:
        - Key: StackID
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Ref 'AWS::StackName'
        - Key: "aws-apn-id"
          Value: "pc:4t4a9h39qkq4tbo3n9zd51p25"
      Type: network

  Neo4jHTTPListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref Neo4jHTTPTargetGroup
          Type: forward
      LoadBalancerArn: !Ref Neo4jNetworkLoadBalancer
      Port: 7474
      Protocol: TCP

  Neo4jBoltListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref Neo4jBoltTargetGroup
          Type: forward
      LoadBalancerArn: !Ref Neo4jNetworkLoadBalancer
      Port: 7687
      Protocol: TCP

  Neo4jHTTPTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Join
        - '-'
        - - !Ref 'AWS::StackName'
          - 'http'
          - 'tg'
      Port: 7474
      Protocol: TCP
      HealthCheckIntervalSeconds: 10
      Tags:
        - Key: StackID
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Ref 'AWS::StackName'
        - Key: "aws-apn-id"
          Value: "pc:4t4a9h39qkq4tbo3n9zd51p25"
      VpcId: !Ref Neo4jVPC

  Neo4jBoltTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Join
        - '-'
        - - !Ref 'AWS::StackName'
          - 'bolt'
          - 'tg'
      Port: 7687
      Protocol: TCP
      HealthCheckIntervalSeconds: 10
      Tags:
        - Key: StackID
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Ref 'AWS::StackName'
        - Key: "aws-apn-id"
          Value: "pc:4t4a9h39qkq4tbo3n9zd51p25"
      VpcId: !Ref Neo4jVPC

  Neo4jAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AvailabilityZones: !If [CreateCluster, [!Select [ 0, Fn::GetAZs: !Ref 'AWS::Region' ] , !Select [ 1, Fn::GetAZs: !Ref 'AWS::Region' ] , !Select [ 2, Fn::GetAZs: !Ref 'AWS::Region' ]],[!Select [ 0, Fn::GetAZs: !Ref 'AWS::Region' ]]]
      LaunchTemplate:
        LaunchTemplateId: !Ref Neo4jLaunchTemplate
        Version: !GetAtt Neo4jLaunchTemplate.LatestVersionNumber
      MinSize: !Ref NumberOfServers
      MaxSize: !Ref NumberOfServers
      VPCZoneIdentifier: !If [CreateCluster, [!Ref Neo4jSubnet1,!Ref Neo4jSubnet2,!Ref Neo4jSubnet3], [!Ref Neo4jSubnet1]]
      TargetGroupARNs:
        - Ref: Neo4jHTTPTargetGroup
        - Ref: Neo4jBoltTargetGroup
      DesiredCapacity:
        !Ref NumberOfServers
      Tags:
        - Key: StackID
          Value: !Ref 'AWS::StackId'
          PropagateAtLaunch: true
        - Key: Name
          Value: !Ref 'AWS::StackName'
          PropagateAtLaunch: true
        - Key: "aws-apn-id"
          Value: "pc:4t4a9h39qkq4tbo3n9zd51p25"
          PropagateAtLaunch: true

  Neo4jLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: !Ref ImageId
        InstanceType:
          Ref: InstanceType
        SecurityGroupIds:
          - Ref: Neo4jExternalSecurityGroup
          - Ref: Neo4jInternalSecurityGroup
        EbsOptimized: true
        IamInstanceProfile:
          Arn: !GetAtt Neo4jInstanceProfile.Arn
        BlockDeviceMappings:
          - DeviceName: /dev/xvda
            Ebs:
              VolumeSize:
                Ref: DiskSize
              VolumeType: gp3
              Encrypted: true
        UserData:
          Fn::Base64:
            !Join
            - ''
            - - "#!/bin/bash\n"
              - "set -euo pipefail\n"
              - "echo Running startup script...\n"

              - "password=\""
              - Ref: Password
              - "\"\n"

              - "nodeCount="
              - Ref: NumberOfServers
              - "\n"

              - "loadBalancerDNSName="
              - Fn::GetAtt: [Neo4jNetworkLoadBalancer,DNSName]
              - "\n"

              - "stackName="
              - Ref: AWS::StackName
              - "\n"

              - "region="
              - Ref: AWS::Region
              - "\n"

              - "install_neo4j_from_yum() {\n"
              - "  echo \"Installing Graph Database...\"\n"
              - "  rpm --import https://debian.neo4j.com/neotechnology.gpg.key\n"
              - "  echo \"[neo4j]\n"
              - "name=Neo4j RPM Repository\n"
              - "baseurl=https://yum.neo4j.com/stable/latest\n"
              - "enabled=1\n"
              - "gpgcheck=1\n\" > /etc/yum.repos.d/neo4j.repo\n"
              - "  export NEO4J_ACCEPT_LICENSE_AGREEMENT=yes\n"
              - "  yum -y install neo4j-enterprise\n"
              - "  systemctl enable neo4j\n"
              - "}\n"

              - "extension_config() {\n"
              - "  echo Configuring extensions and security in neo4j.conf...\n"
              - "  sed -i s~#server.unmanaged_extension_classes=org.neo4j.examples.server.unmanaged=/examples/unmanaged~server.unmanaged_extension_classes=com.neo4j.bloom.server=/bloom,semantics.extension=/rdf~g /etc/neo4j/neo4j.conf\n"
              - "  sed -i s/#dbms.security.procedures.unrestricted=my.extensions.example,my.procedures.*/dbms.security.procedures.unrestricted=gds.*,apoc.*,bloom.*/g /etc/neo4j/neo4j.conf\n"
              - "  echo \"dbms.security.http_auth_allowlist=/,/browser.*,/bloom.*\" >> /etc/neo4j/neo4j.conf\n"
              - "  echo \"dbms.security.procedures.allowlist=apoc.*,gds.*,bloom.*\" >> /etc/neo4j/neo4j.conf\n"
              - "}\n"

              - "build_neo4j_conf_file() {\n"
              - "  local -r privateIP=\"$(hostname -i | awk '{print $NF}')\"\n"
              - "  echo \"Configuring network in neo4j.conf...\"\n"
              - "  sed -i 's/#server.default_listen_address=0.0.0.0/server.default_listen_address=0.0.0.0/g' /etc/neo4j/neo4j.conf\n"
              - "  sed -i s/#server.default_advertised_address=localhost/server.default_advertised_address=\"${loadBalancerDNSName}\"/g /etc/neo4j/neo4j.conf\n"
              - "  sed -i s/#server.bolt.listen_address=:7687/server.bolt.listen_address=0.0.0.0:7687/g /etc/neo4j/neo4j.conf\n"
              - "  sed -i s/#server.bolt.advertised_address=:7687/server.bolt.advertised_address=\"${loadBalancerDNSName}\":7687/g /etc/neo4j/neo4j.conf\n"
              - "  sed -i s/#server.http.listen_address=:7474/server.http.listen_address=0.0.0.0:7474/g /etc/neo4j/neo4j.conf\n"
              - "  sed -i s/#server.http.advertised_address=:7474/server.http.advertised_address=\"${loadBalancerDNSName}\":7474/g /etc/neo4j/neo4j.conf\n"
              - "  neo4j-admin server memory-recommendation >> /etc/neo4j/neo4j.conf\n"
              - "  echo \"server.metrics.enabled=true\" >> /etc/neo4j/neo4j.conf\n"
              - "  echo \"server.metrics.jmx.enabled=true\" >> /etc/neo4j/neo4j.conf\n"
              - "  echo \"server.metrics.prefix=neo4j\" >> /etc/neo4j/neo4j.conf\n"
              - "  echo \"server.metrics.filter=*\" >> /etc/neo4j/neo4j.conf\n"
              - "  echo \"server.metrics.csv.interval=5s\" >> /etc/neo4j/neo4j.conf\n"
              - "  echo \"dbms.routing.default_router=SERVER\" >> /etc/neo4j/neo4j.conf\n"

              - "  if [[ ${nodeCount} == 1 ]]; then\n"
              - "    echo \"Running on a single node.\"\n"
              - "  else\n"
              - "    echo \"Running on multiple nodes.  Configuring membership in neo4j.conf...\"\n"
              - "    sed -i s/#server.cluster.listen_address=:6000/server.cluster.listen_address=0.0.0.0:6000/g /etc/neo4j/neo4j.conf\n"
              - "    sed -i s/#server.cluster.advertised_address=:6000/server.cluster.advertised_address=\"${privateIP}\":6000/g /etc/neo4j/neo4j.conf\n"
              - "    sed -i s/#server.cluster.raft.listen_address=:7000/server.cluster.raft.listen_address=0.0.0.0:7000/g /etc/neo4j/neo4j.conf\n"
              - "    sed -i s/#server.cluster.raft.advertised_address=:7000/server.cluster.raft.advertised_address=\"${privateIP}\":7000/g /etc/neo4j/neo4j.conf\n"
              - "    sed -i s/#server.routing.listen_address=0.0.0.0:7688/server.routing.listen_address=0.0.0.0:7688/g /etc/neo4j/neo4j.conf\n"
              - "    sed -i s/#server.routing.advertised_address=:7688/server.routing.advertised_address=\"${privateIP}\":7688/g /etc/neo4j/neo4j.conf\n"
              - "    sed -i s/#initial.dbms.default_primaries_count=1/initial.dbms.default_primaries_count=3/g /etc/neo4j/neo4j.conf\n"
              - "    sed -i s/#initial.dbms.default_secondaries_count=0/initial.dbms.default_secondaries_count=$(expr ${nodeCount} - 3)/g /etc/neo4j/neo4j.conf\n"
              - "    echo \"dbms.cluster.minimum_initial_system_primaries_count=${nodeCount}\" >> /etc/neo4j/neo4j.conf\n"
              - "    TOKEN=$(curl -X PUT \"http://169.254.169.254/latest/api/token\" -H \"X-aws-ec2-metadata-token-ttl-seconds: 21600\")\n"
              - "    instanceId=$(curl -H \"X-aws-ec2-metadata-token: $TOKEN\" -s http://169.254.169.254/latest/meta-data/instance-id)\n"
              - "    if [[ ${#instanceId} -eq 0 ]]; then\n"
              - "     echo \"Missing instance Id. Exiting!! \"\n"
              - "    fi\n"
              - "    coreMembers=$(aws autoscaling describe-auto-scaling-instances --region $region --output text --query \"AutoScalingInstances[?contains(AutoScalingGroupName,'$stackName-Neo4jAutoScalingGroup')].[InstanceId]\" | xargs -n1 -I {} aws ec2 describe-instances --instance-ids {} --region $region --query \"Reservations[].Instances[].PrivateIpAddress\" --output text --filter \"Name=tag:aws:cloudformation:stack-name,Values=$stackName\")\n"
              - "    if [[ ${#coreMembers} -eq 0 ]]; then\n"
              - "     echo \"Missing coreMembers. Exiting!! \"\n"
              - "    fi\n"
              - "    echo \"CoreMembers = ${coreMembers}\"\n"
              - "    coreMembers=$(echo ${coreMembers} | sed 's/ /:6000,/g')\n"
              - "    coreMembers=$(echo \"${coreMembers}\"):6000\n"
              - "    echo \"dbms.cluster.discovery.resolver_type=LIST\" >> /etc/neo4j/neo4j.conf\n"
              - "    echo \"dbms.cluster.endpoints=${coreMembers}\" >> /etc/neo4j/neo4j.conf\n"
              - "  fi\n"
              - "}\n"

              - "add_cypher_ip_blocklist() {\n"
              - "  echo \"internal.dbms.cypher_ip_blocklist=10.0.0.0/8,172.16.0.0/12,192.168.0.0/16,169.254.169.0/24,fc00::/7,fe80::/10,ff00::/8\" >> /etc/neo4j/neo4j.conf\n"
              - "}\n"

              - "start_neo4j() {\n"
              - "  echo \"Starting Neo4j...\"\n"
              - "  service neo4j start\n"
              - "  neo4j-admin dbms set-initial-password \"${password}\"\n"
              - "}\n"

              - "install_neo4j_from_yum\n"
              - "extension_config\n"
              - "build_neo4j_conf_file\n"
              - "add_cypher_ip_blocklist\n"
              - "start_neo4j\n"

  Neo4jInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: Neo4jRole
  Neo4jRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Policies:
        - PolicyName: Neo4jPolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - autoscaling:CreateOrUpdateTags
                  - autoscaling:DescribeAutoScalingInstances
                  - autoscaling:DescribeAutoScalingGroups
                  - cloudformation:DescribeStack*
                  - ec2:DescribeInstances
                Resource: "*"

  Neo4jExternalSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable Neo4j External Ports
      VpcId: !Ref Neo4jVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 7474
          ToPort: 7474
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 7687
          ToPort: 7687
          CidrIp: 0.0.0.0/0

  Neo4jInternalSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable Neo4j Internal Ports
      VpcId: !Ref Neo4jVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5000
          ToPort: 5000
          SourceSecurityGroupId: !GetAtt Neo4jExternalSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 6000
          ToPort: 6000
          SourceSecurityGroupId: !GetAtt Neo4jExternalSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 7000
          ToPort: 7000
          SourceSecurityGroupId: !GetAtt Neo4jExternalSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 7688
          ToPort: 7688
          SourceSecurityGroupId: !GetAtt Neo4jExternalSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 2003
          ToPort: 2003
          SourceSecurityGroupId: !GetAtt Neo4jExternalSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 2004
          ToPort: 2004
          SourceSecurityGroupId: !GetAtt Neo4jExternalSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 3637
          ToPort: 3637
          SourceSecurityGroupId: !GetAtt Neo4jExternalSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 5005
          ToPort: 5005
          SourceSecurityGroupId: !GetAtt Neo4jExternalSecurityGroup.GroupId

Outputs:
  Neo4jBrowserURL:
    Description: URL for Neo4j Browser
    Value: !Join
      - ''
      - - 'http://'
        - !GetAtt Neo4jNetworkLoadBalancer.DNSName
        - ':'
        - '7474'
  Neo4jURI:
    Description: Neo4j URI
    Value: !Join
      - ''
      - - 'neo4j://'
        - !GetAtt Neo4jNetworkLoadBalancer.DNSName
        - ':'
        - '7687'
  Username:
    Description: 'The username is neo4j.'
    Value: 'neo4j'
